Fix scanner names in ExpressionTypeParser