@@ -19,7 +19,7 @@ public class NoDecisionPresentValidator extends SimpleValidator<Definitions> {
     @Override
     public List<ValidationResult> validate(final Definitions definitions, final ValidationContext validationContext) {
         if (definitions.getChildElementsByType(Decision.class).isEmpty()) {
-            return Collections.singletonList(ValidationResult.init
+            return List.of(ValidationResult.init
                     .message("No decisions found")
                     .severity(Severity.WARNING)
                     .element(definitions)
